--- a/Project.html
+++ b/Project.html
@@ -4,26 +4,31 @@
 <head> 
 </head>
 
-<body>
-<h3 style="text-align:center"> Split </h3>
+<body style="background-color:gray">
 
-<div style="padding-left:50px;padding-right:50px;padding-top:50px;padding-bottom:50px; background-color:black; float:left" ><img src="Split.jpg" border="1">
+<div style="background-color:white">
+<h1 style="text-align:center"> Split </h1>
+<div style="margin-left:265px; float:left; padding:22px; border: 3px solid black" >
+<img src="Split.jpg" border="1">
 </div>
 
 
-<p style="text-align:justify"><b>Plot: </b>Though Kevin (James McAvoy) has evidenced 23 personalities to his trusted psychiatrist, Dr. Fletcher (Betty Buckley), there remains one still submerged who is set to materialize and dominate all of the others. Compelled to abduct three teenage girls led by the willful, observant Casey, Kevin reaches a war for survival among all of those contained within him -- as well as everyone around him -- as the walls between his compartments shatter.</p>
 
+<div style="margin-right:320px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<font color="white">
 
- 
-
-<p style="text-color:white"> <b>Type: </b> Horror </p>
+<p> <b>Type: </b> Horror </p>
 <p> <b>IMDb Rating: </b> 7.3/10 </p>
 <p> <b>Length: </b> 1h 57m </p>
 <p> <b>Director: </b> M. Night Shyamalan </p>
 <p> <b>Cast: </b> James McAvoy, Anya Taylor-Joy, Betty Buckley </p>
 <p> <b>Year: </b> 2016 </p>
 
-
-
+</font>
+</div>
+<div style="float:left; clear:left; padding-left:265px;padding-right:320px">
+<p style="text-align:justify"><b>Plot: </b>Though Kevin (James McAvoy) has evidenced 23 personalities to his trusted psychiatrist, Dr. Fletcher (Betty Buckley), there remains one still submerged who is set to materialize and dominate all of the others. Compelled to abduct three teenage girls led by the willful, observant Casey, Kevin reaches a war for survival among all of those contained within him -- as well as everyone around him -- as the walls between his compartments shatter.</p>
+</div>
+</div>
 </body>
 </html>
