--- a/home.html
+++ b/home.html
@@ -1,118 +1,112 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>IMDb</title>
+	<title>IMDb</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-<div>
-<div style="background-color:black;color:white;padding:20px; ">
-  
-  <h1 style="color:#84c8e8;font-size:50px;padding-left:350px;font-style: italic;"><img src="mb.jpg" style="width:200px;height:75px;float:left"> MOVIE BUZZ</h1>
-</div>
+	<div>
+		<div class="div1">
+			<img src="mb.jpg" class="logo"> 
+			<p class="title"><b>MOVIE BUZZ</b></p>
+		</div>
 
-<div style="background-color:#525453;color:white;padding:20px; ">
-<form style="margin-left: 250px;">
-<input type="text" name="search" placeholder="Search.."  >
-<select name="option">
-    <option value="Titles">Titles</option>
-    <option value="TV Episodes">TV Episodes</option>
-    <option value="Names">Names</option>
-    <option value="Companies">Companies</option>
-    <option value="Keywords">Companies</option>
-    <option value="Characters">Companies</option>
-</select>
+		<div class="div2">
+			<form>
+				<input type="text" name="search" placeholder="Search.."  >
+				<select name="option">
+					<option value="Titles">Titles</option>
+					<option value="TV Episodes">TV Episodes</option>
+					<option value="Names">Names</option>
+					<option value="Companies">Companies</option>
+					<option value="Keywords">Companies</option>
+					<option value="Characters">Companies</option>
+				</select>
 
-<button type="search" style="background-color:#8CDFFE">SEARCH</button>
+				<button type="search">SEARCH</button>
 
-</form>
+			</form>
 
-</div>
+		</div>
 
-<div style="background-color:#9B9DA0;color:white;padding:20px;">
-<form style="margin-left: 200px;">
+		<div class="div3">
+			<select name="Movie,TV,Showtime">
+				<option value="Movies">Movies</option>
+				<option value="Charts & Trends">Chart & Trends</option>
+				<option value="TV & Videos">TV & Videos</option>
+				<option value="Special Features">Special Features</option>
+			</select> |
+			<select name="Celebreties, Events and Photos" >
+				<option value="Celebs">Celebs</option>
+				<option value="Events">Events</option>
+				<option value="Photos">Photos</option>
+				<option value="Special Features">Special Features</option>
+			</select> |
+			<select name="News and Community" >
+				<option value="Top News">Top News</option>
+				<option value="Movie News">Movie News</option>
+				<option value="TV News">TV News</option>
+				<option value="Celebrity News">Celebrity News</option>
+			</select> |
 
-<select name="Movie,TV,Showtime">
-    <option value="Movies">Movies</option>
-    <option value="Charts & Trends">Chart & Trends</option>
-    <option value="TV & Videos">TV & Videos</option>
-    <option value="Special Features">Special Features</option>
-</select> |
-<select name="Celebreties, Events and Photos" >
-    <option value="Celebs">Celebs</option>
-    <option value="Events">Events</option>
-    <option value="Photos">Photos</option>
-    <option value="Special Features">Special Features</option>
-</select> |
-<select name="News and Community" >
-    <option value="Top News">Top News</option>
-    <option value="Movie News">Movie News</option>
-    <option value="TV News">TV News</option>
-    <option value="Celebrity News">Celebrity News</option>
-</select> |
+			<button type="button">SIGN IN</button>
 
-<button type="button" style="background-color:#34C4FA">SIGN IN</button>
-
-
-
-</form>
-</div>
+		</div>
 
 
 
-</div>
+	</div>
 
-		<div style="padding-right: 100px; padding-left: 100px;">
-		<div style=" width:65%; border: 3px solid #005bb7;float:left;overflow-x: auto; white-space: nowrap; background-color:#8dc1fc">
+	<div class="bdiv">
+		<div class="maindiv">
 			<table>
-			<tr>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Baywatch.jpg" height="270" width="192"/><p style="text-align: center">Baywatch</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Bride Wars.jpg" height="270" width="192"/><p style="text-align: center">Bride Wars</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Deadpool.jpg" height="270" width="192"/><p style="text-align: center">Deadpool</p></a></td>
-			</tr>
-			<tr>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Inception.jpg" height="270" width="192"/><p style="text-align: center">Inception</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Interstellar.jpg" height="270" width="192"/><p style="text-align: center">Interstellar</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Law Abiding Citizen.jpg" height="270" width="192"/><p style="text-align:center">Law Abiding Citizen</p></a></td>
-			</tr>
-			<tr>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Split.jpg" height="270" width="192"/><p style="text-align: center">Split</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="The Proposal.jpg" height="270" width="192"/><p style="text-align: center">The Proposal</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="The Pursuit of Happyness.jpg" height="270" width="192"/><p style="text-align: center">The Pursuit of Happyness</p></a></td>
-			</tr>
-			<tr>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="The Ugly Truth.jpg" height="270" width="192"/><p style="text-align: center">The Ugly Truth</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="Wonder Woman.jpg" height="270" width="192"/><p style="text-align: center">Wonder Woman</p></a></td>
-				<td style="padding: 25px"><a href="https://www.google.co.in/"><img src="X-Men Apocalypse.jpg" height="270" width="192"/><p style="text-align: center">X-Men Apocalypse</p></a></td>
-			</tr>
+				<tr>
+					<td><a href="https://www.google.co.in/"><img src="Baywatch.jpg" height="270" width="192"/><p>Baywatch</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="Bride Wars.jpg" height="270" width="192"/><p>Bride Wars</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="Deadpool.jpg" height="270" width="192"/><p>Deadpool</p></a></td>
+				</tr>
+				<tr>
+					<td><a href="https://www.google.co.in/"><img src="Inception.jpg" height="270" width="192"/><p>Inception</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="Interstellar.jpg" height="270" width="192"/><p>Interstellar</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="Law Abiding Citizen.jpg" height="270" width="192"/><p>Law Abiding Citizen</p></a></td>
+				</tr>
+				<tr>
+					<td><a href="https://www.google.co.in/"><img src="Split.jpg" height="270" width="192"/><p>Split</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="The Proposal.jpg" height="270" width="192"/><p>The Proposal</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="The Pursuit of Happyness.jpg" height="270" width="192"/><p>The Pursuit of Happyness</p></a></td>
+				</tr>
+				<tr>
+					<td><a href="https://www.google.co.in/"><img src="The Ugly Truth.jpg" height="270" width="192"/><p>The Ugly Truth</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="Wonder Woman.jpg" height="270" width="192"/><p>Wonder Woman</p></a></td>
+					<td><a href="https://www.google.co.in/"><img src="X-Men Apocalypse.jpg" height="270" width="192"/><p>X-Men Apocalypse</p></a></td>
+				</tr>
 			</table>
 		</div>
-		<div style=" width:30%; margin: auto; border: 3px solid #005bb7;float:right;">
-			<p style="text-align: center; color: red"><b>Top Current Hits</b></p> 
-			<hr style="margin: 0;color: grey;">
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: #464749;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: #464749;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: #464749;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p>
+		<div class="rightdiv">
+			<p><b>Top Current Hits</b></p><hr>
+			<p class="listitem0"><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p>
 			
-			</div>
-		<div style=" width:30%; margin-top: 30px; border: 3px solid #005bb7;float:right;">
-			<p style="text-align: center; color: red"><b>Top Current Hits</b></p> 
-			<hr style="margin: 0;color: grey;">
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: #464749;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: #464749;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: #464749;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr style="margin: 0;color: grey;">	
-			<p style="text-align: center; color: #c74434;margin: 0px;background-color: black;font-size: x-large" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p>
 		</div>
+		<div class="rightdiv">
+			<p><b>Top Current Hits</b></p> 
+			<hr>
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p>
 		</div>
 		<div style="float: left; clear: left">
-			<p>hii</p>
-		</div>
+		<p>hii</p>
+	</div>
+	</div>
 </body>
 </html>
