--- a/home.html
+++ b/home.html
@@ -30,30 +30,19 @@
 		</div>
 
 		<div class="div3">
-			<select name="Movie,TV,Showtime">
-				<option value="Movies">Movies</option>
-				<option value="Charts & Trends">Chart & Trends</option>
-				<option value="TV & Videos">TV & Videos</option>
-				<option value="Special Features">Special Features</option>
-			</select> |
-			<select name="Celebreties, Events and Photos" >
-				<option value="Celebs">Celebs</option>
-				<option value="Events">Events</option>
-				<option value="Photos">Photos</option>
-				<option value="Special Features">Special Features</option>
-			</select> |
-			<select name="News and Community" >
-				<option value="Top News">Top News</option>
-				<option value="Movie News">Movie News</option>
-				<option value="TV News">TV News</option>
-				<option value="Celebrity News">Celebrity News</option>
-			</select> |
-
-			<button type="button">SIGN IN</button>
-
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+					<div class="dropdown-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+				</li>
+			</ul>
 		</div>
-
-
 
 	</div>
 
@@ -61,24 +50,24 @@
 		<div class="maindiv">
 			<table>
 				<tr>
-					<td><a href="https://www.google.co.in/"><img src="Baywatch.jpg" height="270" width="192"/><p>Baywatch</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="Bride Wars.jpg" height="270" width="192"/><p>Bride Wars</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="Deadpool.jpg" height="270" width="192"/><p>Deadpool</p></a></td>
+					<td><a class="movielink" href="Baywatch.html"><img src="Baywatch.jpg" height="270" width="192"/><p>Baywatch</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="Bride Wars.jpg" height="270" width="192"/><p>Bride Wars</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="Deadpool.jpg" height="270" width="192"/><p>Deadpool</p></a></td>
 				</tr>
 				<tr>
-					<td><a href="https://www.google.co.in/"><img src="Inception.jpg" height="270" width="192"/><p>Inception</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="Interstellar.jpg" height="270" width="192"/><p>Interstellar</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="Law Abiding Citizen.jpg" height="270" width="192"/><p>Law Abiding Citizen</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="Inception.jpg" height="270" width="192"/><p>Inception</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="Interstellar.jpg" height="270" width="192"/><p>Interstellar</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="Law Abiding Citizen.jpg" height="270" width="192"/><p>Law Abiding Citizen</p></a></td>
 				</tr>
 				<tr>
-					<td><a href="https://www.google.co.in/"><img src="Split.jpg" height="270" width="192"/><p>Split</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="The Proposal.jpg" height="270" width="192"/><p>The Proposal</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="The Pursuit of Happyness.jpg" height="270" width="192"/><p>The Pursuit of Happyness</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="Split.jpg" height="270" width="192"/><p>Split</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="The Proposal.jpg" height="270" width="192"/><p>The Proposal</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="The Pursuit of Happyness.jpg" height="270" width="192"/><p>The Pursuit of Happyness</p></a></td>
 				</tr>
 				<tr>
-					<td><a href="https://www.google.co.in/"><img src="The Ugly Truth.jpg" height="270" width="192"/><p>The Ugly Truth</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="Wonder Woman.jpg" height="270" width="192"/><p>Wonder Woman</p></a></td>
-					<td><a href="https://www.google.co.in/"><img src="X-Men Apocalypse.jpg" height="270" width="192"/><p>X-Men Apocalypse</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="The Ugly Truth.jpg" height="270" width="192"/><p>The Ugly Truth</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="Wonder Woman.jpg" height="270" width="192"/><p>Wonder Woman</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="X-Men Apocalypse.jpg" height="270" width="192"/><p>X-Men Apocalypse</p></a></td>
 				</tr>
 			</table>
 		</div>
@@ -105,8 +94,8 @@
 			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p>
 		</div>
 		<div style="float: left; clear: left">
-		<p>hii</p>
-	</div>
+			<p>hii</p>
+		</div>
 	</div>
 </body>
 </html>
