--- a/Baywatch.html
+++ b/Baywatch.html
@@ -9,7 +9,7 @@
 <div style="background-color:white">
 <h1 style="text-align:center"> Baywatch </h1>
 <div style="margin-left:275px; float:left; padding:22px; border: 3px solid black" >
-<img src="Baywatch.jfif" border="1">
+<img src="Baywatch.jpg" border="1">
 </div>
 
 
