--- a/Wonder Woman.html
+++ b/Wonder Woman.html
@@ -9,7 +9,7 @@
 <div style="background-color:white">
 <h1 style="text-align:center"> Wonder Woman </h1>
 <div style="margin-left:300px; float:left; padding:22px; border: 3px solid black" >
-<img src="Wonder Woman.jfif" border="1">
+<img src="Wonder Woman.jpg" border="1">
 </div>
 
 
