--- a/home.html
+++ b/home.html
@@ -73,25 +73,31 @@
 		</div>
 		<div class="rightdiv">
 			<p><b>Top Current Hits</b></p><hr>
-			<p class="listitem0"><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
-			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
-			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 91% Wonder Women</p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 87% Logan </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 85% The Circle </p><hr>	
+			<p class="listitem0"><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 81% Moana </p><hr>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 80% Despicable Me 3 </p><hr>
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 79% Pariots Day </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 76% The Fate of the furious </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 75% Lucy </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 72% Cars 3 </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 69% John Wick </p>
 			
 		</div>
 		<div class="rightdiv">
 			<p><b>Top Current Hits</b></p> 
 			<hr>
-			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
-			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>
-			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p><hr>	
-			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 39% X-men </p>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 95% Justice League</p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 91% Thor: Ragnarok </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 87% Avengers: Infinity Wars </p><hr>	
+			<p class="listitem0"><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 85% Aquaman </p><hr>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 84% The Dark Tower </p><hr>
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 80% Dunkirk </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 80% Atomic Blonde </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 79% Pacific Rim: Uprising </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 75% Shazam </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 73% Acendent </p>
 		</div>
 		<div style="float: left; clear: left">
 			<p>hii</p>
