--- a/home.html
+++ b/home.html
@@ -34,11 +34,11 @@
 				<li><a href="#home">Home</a></li>
 				<li><a href="#news">News</a></li>
 				<li class="dropdown">
-					<a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+					<a href="javascript:void(0)" class="dropbtn">Genres</a>
 					<div class="dropdown-content">
-						<a href="#">Link 1</a>
-						<a href="#">Link 2</a>
-						<a href="#">Link 3</a>
+						<a href="#">Crime</a>
+						<a href="#">Thriller</a>
+						<a href="#">Comedy</a>
 					</div>
 				</li>
 			</ul>
