--- a/Bride Wars.html
+++ b/Bride Wars.html
@@ -2,32 +2,34 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="movie.css">>
 </head>
 
-<body style="background-color:gray">
+<body class="main">
 
-<div style="background-color:white">
-<h1 style="text-align:center"> Bride Wars </h1>
-<div style="margin-left:300px; float:left; padding:22px; border: 3px solid black" >
-<img src="Bride Wars.jpg" border="1">
+<div class="main">
+<div class="one">
+<h1> Bride Wars </h1>
+<div class="image">
+<img src="Bride Wars.jpg">
 </div>
 
-
-
-<div style="margin-right:220px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
-<p> <b>Type: </b> Romance/Comedy </p>
+<p> <b>Type: </b> Romance/Comedy  </p>
 <p> <b>IMDb Rating: </b> 5.5/10 </p>
 <p> <b>Length: </b> 1h 29m </p>
-<p> <b>Director: </b> Garry Winick </p>
-<p> <b>Cast: </b> Kate Hudson, Anne Hathaway, Chris Pratt, Bryan Greenberg  </p>
+<p> <b>Director: </b> Seth Gordonn </p>
+<p> <b>Cast: </b> Kate Hudson, Anne Hathaway, Chris Pratt, Bryan Greenberg </p>
 <p> <b>Year: </b> 2009 </p>
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:300px;padding-right:220px">
-<p style="text-align:justify"><b>Plot: </b>: Two girls, who have been the dearest of friends since childhood and together made many plans for their respective weddings, turn into sworn enemies in a race to get married before the other.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>Two girls, who have been the dearest of friends since childhood and together made many plans for their respective weddings, turn into sworn enemies in a race to get married before the other.
+</p>
+</div>
 </div>
 </div>
 </body>
