--- a/Deadpool.html
+++ b/Deadpool.html
@@ -2,22 +2,22 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="movie.css">>
 </head>
 
-<body style="background-color:gray">
+<body class="main">
 
-<div style="background-color:white">
-<h1 style="text-align:center"> Deadpool </h1>
-<div style="margin-left:350px; float:left; padding:22px; border: 3px solid black" >
-<img src="Deadpool.jpg" border="1">
+<div class="main">
+<div class="one">
+<h1> Deadpool </h1>
+<div class="image">
+<img src="Deadpool.jpg">
 </div>
 
-
-
-<div style="margin-right:400px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
-<p> <b>Type: </b> Fantasy/Science fiction    </p>
+<p> <b>Type: </b> Fantasy/Science fiction   </p>
 <p> <b>IMDb Rating: </b> 8/10 </p>
 <p> <b>Length: </b> 1h 48m </p>
 <p> <b>Director: </b> Tim Miller </p>
@@ -26,8 +26,10 @@
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:350px;padding-right:400px">
-<p style="text-align:justify"><b>Plot: </b>Wade Wilson (Ryan Reynolds) is a former Special Forces operative who now works as a mercenary. His world comes crashing down when evil scientist Ajax (Ed Skrein) tortures, disfigures and transforms him into Deadpool. The rogue experiment leaves Deadpool with accelerated healing powers and a twisted sense of humor. With help from mutant allies Colossus and Negasonic Teenage Warhead (Brianna Hildebrand), Deadpool uses his new skills to hunt down the man who nearly destroyed his life.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>Wade Wilson (Ryan Reynolds) is a former Special Forces operative who now works as a mercenary. His world comes crashing down when evil scientist Ajax (Ed Skrein) tortures, disfigures and transforms him into Deadpool. The rogue experiment leaves Deadpool with accelerated healing powers and a twisted sense of humor. With help from mutant allies Colossus and Negasonic Teenage Warhead (Brianna Hildebrand), Deadpool uses his new skills to hunt down the man who nearly destroyed his life.
+</p>
+</div>
 </div>
 </div>
 </body>
