--- a/Baywatch.html
+++ b/Baywatch.html
@@ -2,19 +2,19 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="movie.css">>
 </head>
 
-<body style="background-color:gray">
+<body class="main">
 
-<div style="background-color:white">
-<h1 style="text-align:center"> Baywatch </h1>
-<div style="margin-left:275px; float:left; padding:22px; border: 3px solid black" >
-<img src="Baywatch.jfif" border="1">
+<div class="main">
+<div class="one">
+<h1> Baywatch </h1>
+<div class="image">
+<img src="Baywatch.jpg">
 </div>
 
-
-
-<div style="margin-right:200px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
 <p> <b>Type: </b> Drama film/Action  </p>
@@ -26,8 +26,9 @@
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:275px;padding-right:200px">
-<p style="text-align:justify"><b>Plot: </b>: Matt Brody is a former Olympic swimmer who wants to join an elite team of lifeguards led by the hulking Mitch Buchannon. Brody thinks he's a shoo-in, but his casual attitude starts to instantly rub Mitch the wrong way. When drugs and a shady resort owner pose a threat to the bay, Mitch and Matt must put their differences aside to spring into action and save the day.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>Matt Brody is a former Olympic swimmer who wants to join an elite team of lifeguards led by the hulking Mitch Buchannon. Brody thinks he's a shoo-in, but his casual attitude starts to instantly rub Mitch the wrong way. When drugs and a shady resort owner pose a threat to the bay, Mitch and Matt must put their differences aside to spring into action and save the day.</p>
+</div>
 </div>
 </div>
 </body>
