--- a/home1.html
+++ b/home1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>favmovies</title>
-  <link rel="stylesheet" type="text/css" href="home1.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 
 </head>
