--- a/Baywatch.html
+++ b/Baywatch.html
@@ -2,10 +2,32 @@
 <html>
 
 <head> 
-<link rel="stylesheet" type="text/css" href="movie.css">>
+<link rel="stylesheet" type="text/css" href="style.css">>
 </head>
+<body>
+<div>
+		<div class="div1">
+			<img src="mb.jpg" class="logo"> 
+			<p class="title"><b>MOVIE BUZZ</b></p>  
+		</div>
 
-<body class="main">
+		<div class="div3">
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropbtn">Genres</a>
+					<div class="dropdown-content">
+						<a href="#">Crime</a>
+						<a href="#">Thriller</a>
+						<a href="#">Comedy</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+
+	</div>
+<div class="main">
 
 <div class="main">
 <div class="one">
@@ -29,6 +51,7 @@
 </div>
 <div class="three">
 <p><h2><b><i>Plot</i></b></h2>Matt Brody is a former Olympic swimmer who wants to join an elite team of lifeguards led by the hulking Mitch Buchannon. Brody thinks he's a shoo-in, but his casual attitude starts to instantly rub Mitch the wrong way. When drugs and a shady resort owner pose a threat to the bay, Mitch and Matt must put their differences aside to spring into action and save the day.</p>
+</div>
 </div>
 </div>
 </div>
