--- a/The Ugly Truth.html
+++ b/The Ugly Truth.html
@@ -2,22 +2,45 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="style.css">>
 </head>
+<body>
+<div>
+		<div class="div1">
+			<img src="mb.jpg" class="logo"> 
+			<p class="title"><b>MOVIE BUZZ</b></p>  
+		</div>
 
-<body style="background-color:gray">
+		<div class="div3">
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropbtn">Genres</a>
+					<div class="dropdown-content">
+						<a href="#">Crime</a>
+						<a href="#">Thriller</a>
+						<a href="#">Comedy</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 
-<div style="background-color:white">
-<h1 style="text-align:center"> The Ugly Truth </h1>
-<div style="margin-left:300px; float:left; padding:22px; border: 3px solid black" >
-<img src="The Ugly Truth.jpg" border="1">
+	</div>
+<div class="main">
+
+<div class="main">
+<div class="one">
+<h1> The Ugly Truth </h1>
+<div class="image">
+<img src="The Ugly Truth.jpg">
+
 </div>
 
-
-
-<div style="margin-right:350px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
-<p> <b>Type: </b> Romance/Comedy   </p>
+<p> <b>Type: </b> Romance/Comedy    </p>
 <p> <b>IMDb Rating: </b> 6.5/10 </p>
 <p> <b>Length: </b> 1h 36m </p>
 <p> <b>Director: </b> Robert Luketic </p>
@@ -26,8 +49,10 @@
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:300px;padding-right:350px">
-<p style="text-align:justify"><b>Plot: </b>Abby, a lovelorn TV producer, strikes a deal with her chauvinistic colleague Mike who wants to prove to her the accuracy of his relationship theories.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>Abby, a lovelorn TV producer, strikes a deal with her chauvinistic colleague Mike who wants to prove to her the accuracy of his relationship theories.</p>
+</div>
+</div>
 </div>
 </div>
 </body>
