--- a/Wonder Woman.html
+++ b/Wonder Woman.html
@@ -2,32 +2,57 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="style.css">>
 </head>
+<body>
+<div>
+		<div class="div1">
+			<img src="mb.jpg" class="logo"> 
+			<p class="title"><b>MOVIE BUZZ</b></p>  
+		</div>
 
-<body style="background-color:gray">
+		<div class="div3">
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropbtn">Genres</a>
+					<div class="dropdown-content">
+						<a href="#">Crime</a>
+						<a href="#">Thriller</a>
+						<a href="#">Comedy</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 
-<div style="background-color:white">
-<h1 style="text-align:center"> Wonder Woman </h1>
-<div style="margin-left:300px; float:left; padding:22px; border: 3px solid black" >
-<img src="Wonder Woman.jpg" border="1">
+	</div>
+<div class="main">
+
+<div class="main">
+<div class="one">
+<h1> Wonder Woman </h1>
+<div class="image">
+<img src="Wonder Woman.jpg">
+
 </div>
 
-
-
-<div style="margin-right:350px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
-<p> <b>Type: </b> Fantasy/Science fiction    </p>
+<p> <b>Type: </b> Fantasy/Science fiction     </p>
 <p> <b>IMDb Rating: </b> 8/10 </p>
 <p> <b>Length: </b> 2h 21m </p>
-<p> <b>Director: </b> Patty Jenkins </p>
+<p> <b>Director: </b>  Patty Jenkins </p>
 <p> <b>Cast: </b> Gal Gadot, Chris Pine, Robin Wright </p>
 <p> <b>Year: </b> 2017 </p>
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:300px;padding-right:350px">
-<p style="text-align:justify"><b>Plot: </b>Before she was Wonder Woman (Gal Gadot), she was Diana, princess of the Amazons, trained to be an unconquerable warrior. Raised on a sheltered island paradise, Diana meets an American pilot (Chris Pine) who tells her about the massive conflict that's raging in the outside world. Convinced that she can stop the threat, Diana leaves her home for the first time. Fighting alongside men in a war to end all wars, she finally discovers her full powers and true destiny.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>Before she was Wonder Woman (Gal Gadot), she was Diana, princess of the Amazons, trained to be an unconquerable warrior. Raised on a sheltered island paradise, Diana meets an American pilot (Chris Pine) who tells her about the massive conflict that's raging in the outside world. Convinced that she can stop the threat, Diana leaves her home for the first time. Fighting alongside men in a war to end all wars, she finally discovers her full powers and true destiny.</p>
+</div>
+</div>
 </div>
 </div>
 </body>
