--- a/X-Men Apocalypse.html
+++ b/X-Men Apocalypse.html
@@ -2,32 +2,57 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="style.css">>
 </head>
+<body>
+<div>
+		<div class="div1">
+			<img src="mb.jpg" class="logo"> 
+			<p class="title"><b>MOVIE BUZZ</b></p>  
+		</div>
 
-<body style="background-color:gray">
+		<div class="div3">
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropbtn">Genres</a>
+					<div class="dropdown-content">
+						<a href="#">Crime</a>
+						<a href="#">Thriller</a>
+						<a href="#">Comedy</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 
-<div style="background-color:white">
-<h1 style="text-align:center"> X-Men Apocalypse </h1>
-<div style="margin-left:200px; float:left; padding:22px; border: 3px solid black" >
-<img src="X-Men Apocalypse.jpg" border="1">
+	</div>
+<div class="main">
+
+<div class="main">
+<div class="one">
+<h1> X-Men Apocalypse </h1>
+<div class="image">
+<img src="X-Men Apocalypse.jpg">
+
 </div>
 
-
-
-<div style="margin-right:120px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
-<p> <b>Type: </b> Fantasy/Science fiction </p>
+<p> <b>Type: </b> Fantasy/Science fiction     </p>
 <p> <b>IMDb Rating: </b> 7.1/10 </p>
 <p> <b>Length: </b> 2h 27m </p>
 <p> <b>Director: </b> Bryan Singer </p>
-<p> <b>Cast: </b> Jennifer Lawrence, James McAvoy, Michael Fassbender, Sophie Turner, Oscar Isaac </p>
-<p> <b>Year: </b> 2016 </p>
+<p> <b>Cast: </b> Jennifer Lawrence, James McAvoy, Michael Fassbender, Oscar Isaac </p>
+<p> <b>Year: </b> 2009 </p>
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:200px;padding-right:120px">
-<p style="text-align:justify"><b>Plot: </b>: The all-powerful mutant Apocalypse who is long revered as a god wants to cause extinction on earth. The X-Men must work together to demolish his plans.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>The all-powerful mutant Apocalypse who is long revered as a god wants to cause extinction on earth. The X-Men must work together to demolish his plans.</p>
+</div>
+</div>
 </div>
 </div>
 </body>
