--- a/Law Abiding Citizen.html
+++ b/Law Abiding Citizen.html
@@ -2,32 +2,57 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="style.css">>
 </head>
+<body>
+<div>
+		<div class="div1">
+			<img src="mb.jpg" class="logo"> 
+			<p class="title"><b>MOVIE BUZZ</b></p>  
+		</div>
 
-<body style="background-color:gray">
+		<div class="div3">
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropbtn">Genres</a>
+					<div class="dropdown-content">
+						<a href="#">Crime</a>
+						<a href="#">Thriller</a>
+						<a href="#">Comedy</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 
-<div style="background-color:white">
-<h1 style="text-align:center"> Law Abiding Citizen </h1>
-<div style="margin-left:300px; float:left; padding:22px; border: 3px solid black" >
-<img src="Law Abiding Citizen.jpg" border="1">
+	</div>
+<div class="main">
+
+<div class="main">
+<div class="one">
+<h1> Law Abiding Citizen </h1>
+<div class="image">
+<img src="Law Abiding Citizen.jpg">
+
 </div>
 
-
-
-<div style="margin-right:350px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
-<p> <b>Type: </b> Thriller/Drama  </p>
+<p> <b>Type: </b>Thriller/Drama</p>
 <p> <b>IMDb Rating: </b> 7.4/10 </p>
 <p> <b>Length: </b> 1h 58m </p>
-<p> <b>Director: </b>  F. Gary Gray </p>
-<p> <b>Cast: </b> Jamie Foxx and Gerard Butler </p>
+<p> <b>Director: </b> F. Gary Gray </p>
+<p> <b>Cast: </b> Jamie Foxx, Gerard Butler </p>
 <p> <b>Year: </b> 2009 </p>
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:300px;padding-right:350px">
-<p style="text-align:justify"><b>Plot: </b>: Clyde Shelton is a desperate man exacting revenge on those who killed his family as well as on those police officials, including DA Nick Rice, who could not guarantee an appropriate sentence.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>: Clyde Shelton is a desperate man exacting revenge on those who killed his family as well as on those police officials, including DA Nick Rice, who could not guarantee an appropriate sentence.</p>
+</div>
+</div>
 </div>
 </div>
 </body>
