--- a/Split.html
+++ b/Split.html
@@ -2,22 +2,45 @@
 <html>
 
 <head> 
+<link rel="stylesheet" type="text/css" href="style.css">>
 </head>
+<body>
+<div>
+		<div class="div1">
+			<img src="mb.jpg" class="logo"> 
+			<p class="title"><b>MOVIE BUZZ</b></p>  
+		</div>
 
-<body style="background-color:gray">
+		<div class="div3">
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li class="dropdown">
+					<a href="javascript:void(0)" class="dropbtn">Genres</a>
+					<div class="dropdown-content">
+						<a href="#">Crime</a>
+						<a href="#">Thriller</a>
+						<a href="#">Comedy</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 
-<div style="background-color:white">
-<h1 style="text-align:center"> Split </h1>
-<div style="margin-left:265px; float:left; padding:22px; border: 3px solid black" >
-<img src="Split.jpg" border="1">
+	</div>
+<div class="main">
+
+<div class="main">
+<div class="one">
+<h1> Split </h1>
+<div class="image">
+<img src="Split.jpg">
+
 </div>
 
-
-
-<div style="margin-right:320px;padding-left:20px;padding-right:20px;margin-top:100px; float:right; background-color:black"> 
+<div class="two">
 <font color="white">
 
-<p> <b>Type: </b> Horror </p>
+<p> <b>Type: </b>Horror </p>
 <p> <b>IMDb Rating: </b> 7.3/10 </p>
 <p> <b>Length: </b> 1h 57m </p>
 <p> <b>Director: </b> M. Night Shyamalan </p>
@@ -26,8 +49,10 @@
 
 </font>
 </div>
-<div style="float:left; clear:left; padding-left:265px;padding-right:320px">
-<p style="text-align:justify"><b>Plot: </b>Though Kevin (James McAvoy) has evidenced 23 personalities to his trusted psychiatrist, Dr. Fletcher (Betty Buckley), there remains one still submerged who is set to materialize and dominate all of the others. Compelled to abduct three teenage girls led by the willful, observant Casey, Kevin reaches a war for survival among all of those contained within him -- as well as everyone around him -- as the walls between his compartments shatter.</p>
+<div class="three">
+<p><h2><b><i>Plot</i></b></h2>: Though Kevin (James McAvoy) has evidenced 23 personalities to his trusted psychiatrist, Dr. Fletcher (Betty Buckley), there remains one still submerged who is set to materialize and dominate all of the others. Compelled to abduct three teenage girls led by the willful, observant Casey, Kevin reaches a war for survival among all of those contained within him -- as well as everyone around him -- as the walls between his compartments shatter.</p>
+</div>
+</div>
 </div>
 </div>
 </body>
