P:Commit after header

--- a/home.html
+++ b/home.html
@@ -9,24 +9,10 @@
 		<div class="div1">
 			<img src="mb.jpg" class="logo"> 
 			<p class="title"><b>MOVIE BUZZ</b></p>  
-		</div>
-
-		<div class="div2">
-			<form>
+			<form style="padding-left: 730px;">
 				<input type="text" name="search" placeholder="Search.."  >
-				<select name="option">
-					<option value="Titles">Titles</option>
-					<option value="TV Episodes">TV Episodes</option>
-					<option value="Names">Names</option>
-					<option value="Companies">Companies</option>
-					<option value="Keywords">Companies</option>
-					<option value="Characters">Companies</option>
-				</select>
-
 				<button type="search">SEARCH</button>
-
 			</form>
-
 		</div>
 
 		<div class="div3">
