P:Commit before 1st presentation

--- a/Baywatch.html
+++ b/Baywatch.html
@@ -2,7 +2,7 @@
 <html>
 
 <head> 
-<link rel="stylesheet" type="text/css" href="style.css">>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div>
@@ -10,7 +10,9 @@
 			<img src="mb.jpg" class="logo"> 
 			<p class="title"><b>MOVIE BUZZ</b></p>  
 		</div>
-
+		<div class="one">
+			<h1> Baywatch </h1>
+		</div>
 		<div class="div3">
 			<ul>
 				<li><a href="#home">Home</a></li>
@@ -30,8 +32,7 @@
 <div class="main">
 
 <div class="main">
-<div class="one">
-<h1> Baywatch </h1>
+
 <div class="image">
 <img src="Baywatch.jpg">
 
