D:10th july final commit

--- a/home.html
+++ b/home.html
@@ -8,27 +8,10 @@
 	<div>
 		<div class="div1">
 			<img src="mb.jpg" class="logo"> 
-			<p class="title"><b>MOVIE BUZZ</b></p>  
+			<p class="title"><b>MOVIE BUZZ</b>
+			<input type="text" name="search" placeholder="Search.."  >
+			<button type="search">SEARCH</button></p>
 		</div>
-
-		<div class="div2">
-			<form>
-				<input type="text" name="search" placeholder="Search.."  >
-				<select name="option">
-					<option value="Titles">Titles</option>
-					<option value="TV Episodes">TV Episodes</option>
-					<option value="Names">Names</option>
-					<option value="Companies">Companies</option>
-					<option value="Keywords">Companies</option>
-					<option value="Characters">Companies</option>
-				</select>
-
-				<button type="search">SEARCH</button>
-
-			</form>
-
-		</div>
-
 		<div class="div3">
 			<ul>
 				<li><a href="#home">Home</a></li>
@@ -67,7 +50,7 @@
 				<tr>
 					<td><a class="movielink" href="https://www.google.co.in/"><img src="The Ugly Truth.jpg" height="270" width="192"/><div class="overlay"><img src="star.png" height="50"><p class="hovertext">6.5/10<br><br>Romance<br>Comedy<br><br>Run Time: 96 mins</p></div><p>The Ugly Truth</p></a></td>
 					<td><a class="movielink" href="https://www.google.co.in/"><img src="Wonder Woman.jpg" height="270" width="192"/><div class="overlay"><img src="star.png" height="50"><p class="hovertext">8/10<br><br>Fantasy<br>Science fiction<br><br>Run Time: 141 mins</p></div><p>Wonder Woman</p></a></td>
-					<td><a class="movielink" href="https://www.google.co.in/"><img src="X-Men Apocalypse.jpg" height="270" width="192"/><div class="overlay"><img src="star.png" height="50"><p class="hovertext">7.6/10<br><br>Fantasy<br>Science fiction<br><br>Run Time: 147 mins</p></div><p>X-Men Apocalypse</p></a></td>
+					<td><a class="movielink" href="https://www.google.co.in/"><img src="X-Men Apocalypse.jpg" height="270" width="192"/><div class="overlay"><img src="star.png" height="50"><p class="hovertext">7.6/10<br><br>Fantasy<br>Science fiction<br><br>Run Time: 116 mins</p></div><p>X-Men Apocalypse</p></a></td>
 				</tr>
 			</table>
 		</div>
@@ -86,7 +69,7 @@
 			
 		</div>
 		<div class="rightdiv">
-			<p><b>Top Current Hits</b></p> 
+			<p><b>Upcoming Releases</b></p> 
 			<hr>
 			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 95% Justice League</p><hr>	
 			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 91% Thor: Ragnarok </p><hr>	
@@ -99,9 +82,74 @@
 			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 75% Shazam </p><hr>	
 			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 73% Acendent </p>
 		</div>
-		<div style="float: left; clear: left">
-			<p>hii</p>
+		<div class="rightdiv">
+			<p><b>Top Current Hits</b></p><hr>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 91% Wonder Women</p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 87% Logan </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 85% The Circle </p><hr>	
+			<p class="listitem0"><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 81% Moana </p><hr>
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 80% Despicable Me 3 </p><hr>
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 79% Pariots Day </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 76% The Fate of the furious </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 75% Lucy </p><hr>	
+			<p class="listitem1" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 72% Cars 3 </p><hr>	
+			<p class="listitem0" ><img src="https://image.flaticon.com/icons/png/128/148/148838.png" height="18" width="18"> 69% John Wick </p>
+			
 		</div>
+		<div class="rightdiv">
+			<p><b>Celebrity of the Day</b></p><hr>
+			<img src="cotd.jpg" height="40%" width="40%" style="float: left; padding: 5px">
+			<br>
+			<b>Name:</b> Sylvester Stallone<br>
+			<b>Born:</b> 6 July 1946 (age 71)<br>
+			<b>Height:</b> 1.77 m<br>
+			<b>Net worth:</b> $400 million (2015)<br>
+			<b>Quote:</b><br>
+			<i>Success is usually the culmination of controlling failure</i>
+			<p style="float: left;text-align: justify; padding: 5px; margin: 0px">Michael Sylvester Gardenzio Stallone is an American actor, filmmaker, and screenwriter. He is well known for his Hollywood action roles, including boxer Rocky Balboa, the title character of the Rocky series' seven films from 1976 to 2015; soldier John Rambo from the four Rambo films, released between 1982 and 2008; and Barney Ross in the three The Expendables films from 2010 to 2014. He wrote or co-wrote most of the 14 films in all three franchises, and directed many of the films.</p>
+		</div>
+		<section class="slideshow">
+			<div class="slideshowcontainer">
+				<p style="font-size: larger; font-weight: bolder; color: #005bb7;">EVERGREEN CLASSICS</p>
+				<div  id="slider">
+					<div class="gallery">
+						<img src="adolf_hitler.jpg" alt="Adolf Hitler">
+						<div class="desc"><b> Adolf Hitler</b> </div>
+					</div>
+
+					<div class="gallery">
+						<img src="blue_bloods.jpg" alt="Blue Bloods">
+						<div class="desc"><b>Blue Bloods</b></div>
+					</div>
+
+					<div class="gallery">
+						<img src="despicable_me.jpg" alt="Despicable Me">
+						<div class="desc"><b>Despicable Me</b></div>
+					</div>
+
+					<div class="gallery">
+						<img src="Inception.jpg" alt="Inception">
+						<div class="desc"><b>Inception</b></div>
+					</div>
+
+					<div class="gallery">
+						<img src="Saving_Private_Ryan.jpg" alt="Saving Private Ryan">
+						<div class="desc"><b>Saving Private Ryan</b></div>
+					</div>
+
+					<div class="gallery">
+						<img src="The_Matrix.jpg" alt="The Matrix">
+						<div class="desc"><b>The Matrix</b></div>
+					</div>
+
+					<div class="gallery">
+						<img src="The-Pursuit-of-Happyness-Poster.jpg" alt="The Pursuit of Happyness">
+						<div class="desc"><b>The Pursuit of Happyness</b></div>
+					</div>
+
+				</div>
+			</div>
+		</section>
 	</div>
 </body>
 </html>
